# Arya.ai_tasks

./: .env  BackgroundRemove.py  ImageHologramSign.py  OCR_Prcessing.py  Processing_docx.py  README.md  frontend.py  main.py  pyproject.toml  testing.py  utils.py
Backend/: app.py
Log/: session_creation.txt
Resources/: app.py  bgremove_process.py  load_model.py  story1.json  test.ipynb
Test/: testing.py
app/: main.py
temp/: session_creation.txt
