[project]
name = "bg-remove"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "httpx>=0.28.1",
    "onnxruntime>=1.23.2",
    "psutil>=7.1.3",
    "pytest>=9.0.2",
    "python-multipart>=0.0.20",
    "rembg>=2.0.68",
]
