[project]
name = "bg-remove"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aspose-words>=25.12.0",
    "black>=25.12.0",
    "docx2pdf>=0.1.8",
    "fastapi[standard]>=0.122.0",
    "httpx>=0.28.1",
    "onnxruntime>=1.23.2",
    "pdfplumber>=0.11.8",
    "psutil>=7.1.3",
    "pytest>=9.0.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "rembg>=2.0.68",
    "ruff>=0.14.10",
    "streamlit>=1.52.2",
]
